objects/UPC_Price_Item_Price_Item_Association__c.object
<CustomObject>
    <fields>
        <fullName>CSCRM_Migration_Id__c</fullName>
        <description>Used as an external id for migrating the data from org to an org (easing up the deployments).</description>
        <externalId>true</externalId>
        <inlineHelpText>Used as an external id for migrating the data from org to an org (easing up the deployments).</inlineHelpText>
        <label>CSCRM Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UPC_Commercial_Product_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Product - Product</label>
        <referenceTo>cspmb__Price_Item__c</referenceTo>
        <relationshipLabel>Commercial Products Associations (Product)</relationshipLabel>
        <relationshipName>Commercial_Products_Associations_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Commercial_Product_Tariff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Product - Tariff</label>
        <referenceTo>cspmb__Price_Item__c</referenceTo>
        <relationshipLabel>Commercial Products Associations (Tariff)</relationshipLabel>
        <relationshipName>Commercial_Products_Associations_Tariff</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commercial Products Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CSCRM_Migration_Id__c</columns>
        <columns>NAME</columns>
        <columns>UPC_Commercial_Product_Product__c</columns>
        <columns>UPC_Commercial_Product_Tariff__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Commercial Product Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Products Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>